--- a/app/globals.css
+++ b/app/globals.css
@@ -71,7 +71,7 @@
     width: 100%;
     height: 4px;
     border-radius: 4px;
-    background-color: #dc2626;
+    background-color: #22c55e;
     bottom: 0;
     left: 0;
     transform-origin: right;
